Fix alignment mobile

--- a/Front-End/src/styles/sass/_listings.scss
+++ b/Front-End/src/styles/sass/_listings.scss
@@ -24,6 +24,12 @@
         }
     }
 
+    @media screen and (max-width: $sm-size) {
+        & .listings-content {
+            text-align: center;
+        }
+      }
+
 
 }
 
